test/errhandling/psahabu/strict-try.compopts
--strict-errors                    # strict-try.strict.good
--strict-errors --no-strict-errors # strict-try.default.good
